--- a/quiz.html
+++ b/quiz.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>triangle-quiz</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body> 
         <nav>
@@ -13,7 +14,8 @@
             <a href="hypotenuse.html">Hypotenuse Calculator</a>
             <a href="area.html">Area Calculator</a>
         </nav>
-    <h1>Traingle Quiz</h1>
+        <div class="container">
+    <h1>Triangle Quiz</h1>
     <form id="quiz-form">
         <div class="quiz-container">
             <p> What is the third angle for the triangle where angle1 = 45° and angle2 = 45°?</p>
@@ -66,6 +68,7 @@
     </form>
     <button type="submit" id="submit-btn">Submit</button>
     <div id="output-div"></div>
+    </div>
     <script src="quiz.js"></script>
 </body>
 </html>
