--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hypotenuse-calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
@@ -13,14 +14,16 @@
         <a href="hypotenuse.html">Hypotenuse Calculator</a>
         <a href="area.html">Area Calculator</a>
     </nav>
+    <div class="container">
     <h1>Hypotenuse Calculator</h1>
-    <p>Enter the length of two sides to get the hypotenuse length</p>
+    <p class="hypotenuse">Enter the length of two sides to get the hypotenuse length</p>
     <label>enter first side</label>
     <input type="number" class="side-input">
     <label>enter second side</label>
     <input type="number" class="side-input">
     <button id="hypotenuse-btn">calculate hypotenuse</button>
     <div id="output-div"></div>
+    </div>
 </body>
 <script src="hypotenuse.js"></script>
 </html>
