--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>triangle trivia</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
@@ -13,6 +14,7 @@
         <a href="hypotenuse.html">Hypotenuse Calculator</a>
         <a href="area.html">Area Calculator</a>
     </nav>
+    <div class="container">
     <h1>Angles of Triangle</h1>
     <label for="angle1">Angle1</label>
     <input type="number" class="angles-of-triangle">
@@ -22,6 +24,7 @@
     <input type="number" class="angles-of-triangle">
     <button id="is-triangle">Is Triangle?</button>
     <div id="output-div"></div>
+    </div>
     <script src="isTriangle.js"></script>
 </body>
 </html>
